--- a/Matrices.tex
+++ b/Matrices.tex
@@ -233,20 +233,148 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\item{$(A + B)C = C(A + B) = AC + BC$}
 		\item{$AA^{T}$ is a symmetric matrix with positive values along the diagonal}
 		\end{itemize}
+	
+		\bigskip
+		\subsubsection{Block Matrix multiplication}\label{sssection:block-matrix-multiplication}
+		In the description of matrix multiplication as
+		\begin{align*}
+		\begin{bmatrix}
+		a & b \\
+		c & d \\
+		\end{bmatrix}
+		\begin{bmatrix}
+		e & f \\
+		g & h \\
+		\end{bmatrix}
+		&=
+		\begin{bmatrix}
+		ae + bg & af + bh \\
+		ce + dg & cf + dh \\
+		\end{bmatrix}
+		\end{align*}
+		${ a,b,\dots,h }$ could also be blocks of matrices. In which case, the resulting calculations --- ${ ae + bg }$ etc. --- refer to matrix multiplication $ae$ where $a$ and $e$ are treated as matrices and must have compatible dimensions. This can be seen as follows.
+		\[ 
+			\begin{bmatrix}
+			a_{11} & a_{12}\\
+			a_{21} & a_{22}
+			\end{bmatrix} 
+			\begin{bmatrix}
+			b_{11} & b_{12}\\
+			b_{21} & b_{22}
+			\end{bmatrix}  =
+			\begin{bmatrix}
+			a_{11}b_{11} + a_{12}b_{21} & \cdots\\
+			a_{21}b_{11} + a_{22}b_{21} & \cdots
+			\end{bmatrix} 
+		\]
+		\begin{align*}
+		&& \begin{bmatrix}
+			a_{11} & a_{12} & a_{13}\\
+			a_{21} & a_{22} & a_{23}
+			\end{bmatrix} 
+			\begin{bmatrix}
+			b_{11} & b_{12}\\
+			b_{21} & b_{22} \\
+			b_{31} & b_{32}
+			\end{bmatrix} &= 
+			\begin{bmatrix}
+			a_{11}b_{11} + a_{12}b_{21} + a_{13}b_{31} & \cdots\\
+			\vdots
+			\end{bmatrix} \\
+		&&  &= 
+			\begin{bmatrix}
+			(a_{11}b_{11} + a_{12}b_{21}) + a_{13}b_{31} & \cdots\\
+			\vdots
+			\end{bmatrix} \\
+		&&  &= 
+			\begin{bmatrix}
+			a_{11} & a_{12}\\
+			a_{21} & a_{22}
+			\end{bmatrix} 
+			\begin{bmatrix}
+			b_{11} & b_{12}\\
+			b_{21} & b_{22}
+			\end{bmatrix} + 
+			\begin{bmatrix}
+			a_{13}\\a_{23}
+			\end{bmatrix}
+			\begin{bmatrix}
+			b_{31} & b_{32}
+			\end{bmatrix}.\\
+		\end{align*}
+		
+		So we have, for example, working in blocks,
+		\[
+			\begin{bmatrix}
+			A & B\\
+			C & D
+			\end{bmatrix}
+			\begin{bmatrix}
+			E & F\\
+			G & H
+			\end{bmatrix} = 
+			\begin{bmatrix}
+			AE + BG & AF + BH\\
+			CE + DG & CF + DH
+			\end{bmatrix},
+		\]
+		\[
+			\begin{bmatrix}
+			A & B\\
+			C & D
+			\end{bmatrix}
+			\begin{bmatrix}
+			E & F\\
+			G & H
+			\end{bmatrix} = 
+			\begin{bmatrix}
+			I & 0\\
+			0 & I
+			\end{bmatrix} \implies
+			AF = -BH,\, CE = -DG,\, AE + BG = CF + DH = I,
+		\]
+		\[ 
+			\begin{bmatrix}
+			A\\B
+			\end{bmatrix}
+			\begin{bmatrix}
+			C & D
+			\end{bmatrix} =
+			\begin{bmatrix}
+			I & E\\
+			F & G
+			\end{bmatrix} \implies
+			AC = I \iff C = \inv{A}.
+		\]
 		
 		\bigskip
 		\subsubsection{Matrix transpose}
-		Denote the $i$th row of the matrix $A$ as $A[i:]$ and the $j$th column of the matrix $B$ as $B[:j]$ and a matrix whose components at $(i,j)$ are the dot-products of the $i$th row of the matrix $A$ with the $j$th column of the matrix $B$ as $(\langle A[i:], B[:j] \rangle)$. Then,
-		\begin{align*}
-		(AB)^{T} = (\langle A[i:], B[:j] \rangle)^{T} = (\langle A[j:], B[:i] \rangle) \\
-		B^{T}A^{T} = (\langle B^{T}[i:], A^{T}[:j] \rangle) = (\langle B[:i], A[j:] \rangle)
-		\end{align*}
-		So, $(AB)^{T} = B^{T}A^{T}$. A consequence of this is that,
-		\begin{align*}
-		&& I = A\inv{A} &= (AA^{-1})^{T} = (A^{-1})^{T}A^{T} \\
-		& \iff & I\inv{(A^{T})} &= (A^{-1})^{T}A^{T}\inv{(A^{T})} \\
-		& \iff & \inv{(A^{T})} &= (A^{-1})^{T}
-		\end{align*}
+		\bigskip
+		\labeledProposition{$(AB)^{T} = B^{T}A^{T}$}{}
+		\begin{proof}
+			Denote the $i$th row of the matrix $A$ as $A[i:]$ and the $j$th column of the matrix $B$ as $B[:j]$ and a matrix whose components at $(i,j)$ are the dot-products of the $i$th row of the matrix $A$ with the $j$th column of the matrix $B$ as $(\langle A[i:], B[:j] \rangle)$. Then,
+			\begin{align*}
+			(AB)^{T} = (\langle A[i:], B[:j] \rangle)^{T} = (\langle A[j:], B[:i] \rangle) \\
+			B^{T}A^{T} = (\langle B^{T}[i:], A^{T}[:j] \rangle) = (\langle B[:i], A[j:] \rangle)
+			\end{align*}
+			So, by commutativity of dot-product, $(AB)^{T} = B^{T}A^{T}$.
+		\end{proof}
+		
+		\medskip
+		\labeledProposition{${ \inv{(A^{T})} = (A^{-1})^{T} }$}{matrix-inverse-of-transpose-is-transpose-of-inverse}
+		\begin{proof}
+			\begin{align*}
+			&& I = A\inv{A} &= (AA^{-1})^{T} = (A^{-1})^{T}A^{T} \\
+			& \iff & I\inv{(A^{T})} &= (A^{-1})^{T}A^{T}\inv{(A^{T})} \\
+			& \iff & \inv{(A^{T})} &= (A^{-1})^{T}. \qedhere
+			\end{align*}
+		\end{proof}		
+		
+		\medskip
+		\labeledProposition{${ (A + B)^T = A^T + B^T }$}{matrix-transpose-distributes-over-addition}
+		\begin{proof}
+			In ${ A + B }$ the ${ (i,j) }$ element is ${ A_{ij} + B_{ij} }$ so the ${ (i,j) }$ element of ${ (A + B)^T }$ is ${ A_{ji} + B_{ji} }$ which clearly is also the ${ (i,j) }$ element of ${  A^T + B^T }$. \qedhere
+		\end{proof}
 		
 		\bigskip
 		\subsubsection{Matrix inverse}
